--- a/package.json
+++ b/package.json
@@ -46,5 +46,5 @@
   "devDependencies": {
     "node-sass": "^6.0.1"
   },
-  "homepage": "https://levifrosty.github.io/twitClone"
+  "homepage": "https://levifrosty.github.io/twitClone/"
 }
